@@ -1,5 +1,11 @@
 2009-03-31  Paul Thomas  <pault@gcc.gnu.org>
 
+	PR fortran/38917
+	PR fortran/38918
+	* gfortran.dg/data_pointer_1.f90: New test.
+
+2009-03-31  Paul Thomas  <pault@gcc.gnu.org>
+
 	PR fortran/38915
 	* gfortran.dg/char_length_15.f90: New test.
 
